[gd_scene load_steps=6 format=2]

[ext_resource path="res://utils/ButtonChangeScene.gd" type="Script" id=1]
[ext_resource path="res://utils/InputFormatLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/tasks/FoodTask.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Demo.gd" type="Script" id=4]
[ext_resource path="res://utils/DialogPlayer.tscn" type="PackedScene" id=5]

[node name="Demo" type="Node2D"]
script = ExtResource( 4 )

[node name="ChangeScene" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
focus_mode = 0
text = "Change scene"
script = ExtResource( 1 )
next_scene = "res://scenes/Demo.tscn"

[node name="InputFormatLabel" parent="." instance=ExtResource( 2 )]
margin_left = 1.0
margin_top = 22.0
margin_right = 431.0
margin_bottom = 127.0
text = "Press {dash} to eat.
Press {up}, {down}, {left}, {right} to move"
autowrap = true

[node name="FoodTask" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogPlayer" parent="CanvasLayer" instance=ExtResource( 5 )]
__meta__ = {
"_edit_use_anchors_": true
}
autoplay = true
autoplay_dialog = [ "Hello Worldppppp Test", "Do you like pie?", "Me too!" ]

[connection signal="dialog_finished" from="CanvasLayer/DialogPlayer" to="." method="_on_DialogPlayer_dialog_finished"]
